Fixed the semantic HTML so it doesnt break the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,13 +69,13 @@ p {
     margin-left: 25px;
 }
 
-.Search_Engine_Optimizaion{
+.search_engine {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.Lead_Generation {
+.benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
